Ajout des classes metier

--- a/site/app/config/routing.yml
+++ b/site/app/config/routing.yml
@@ -1,3 +1,7 @@
+home_utilisateur:
+    resource: "@HomeUtilisateurBundle/Resources/config/routing.yml"
+    prefix:   /utilisateur
+
 app:
     resource: '@AppBundle/Controller/'
     type: annotation
